Fixing issue with mobile fixed and z-indexs, upgraded performance in mobile

--- a/src/parallax.scss
+++ b/src/parallax.scss
@@ -2,6 +2,7 @@ html, body{
 	height: 100%;
 }
 .parallux.not-full{
+	overflow: hidden;
 	.parallux-bg{
 		height: 100%;
 		bottom: initial;
